# kocort

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README-CN.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml  publish.yml  release-cli.yml  release-desktop-gpu.yml  release-desktop.yml  release-gpu.yml  release-web.yml  sync-website-downloads.yml
api/: api_test.go  dashboard_test.go  errors.go  middleware.go  routes.go  server.go  server_test.go  static_embed.go
api/handlers/: channels.go  engine.go  errors.go  events.go  rpc.go  system.go  workspace.go
api/presets/: models.go  models.json
api/service/: acp_gateway.go  brain.go  brain_local.go  brain_local_test.go  brain_test.go  cerebellum.go  cerebellum_test.go  chat_gateway.go  config.go  context.go  dashboard.go  localmodel_catalog.go  oauth.go  providers.go  state.go  task.go
api/static_fallback/: index.html
api/types/: types.go
cmd/kocort/: main.go
cmd/kocort-desktop/: browser_linux.go  browser_windows.go  desktop_common.go  desktop_common_test.go  i18n.go  locale_unix.go  locale_windows.go  main.go  tray_darwin.go  tray_linux.go  tray_windows.go
defaults/: catalog.json  channels.example.json  models.example.json
desktop/icons/: README.md  icon.icns
desktop/linux/: README.md  kocort.desktop
desktop/macos/: README.md
desktop/windows/: README.md  kocort.manifest  kocort.rc
docs/: ACP_BRIDGE.md  API_REFERENCE.md  ARCHITECTURE.md  CLIENTS_AND_DEPLOYMENT.md  CONFIGURATION.md  DEVELOPMENT.md  HEARTBEAT_ARCHITECTURE.md  MODULES.md  README.md  REFACTOR_LLAMA_DL.md  RUNTIME_PIPELINE.md
internal/acp/: bootstrap_service.go  doc.go  lifecycle.go  live_stream_relay.go  manager.go  parent_stream.go  reset_lifecycle.go  spawn_launch.go  spawn_launch_test.go  spawn_request.go  spawn_request_test.go  spawn_service.go
internal/acpbridge/: server.go  server_test.go
internal/backend/: acp_backend.go  acp_runtime_adapter.go  acp_runtime_adapter_test.go  anthropic_compat_backend.go  anthropic_history.go  auth_cooldown.go  auth_profiles.go  auth_profiles_test.go  backend_registry.go  cli_backend.go  command_backend.go  command_helpers.go  command_helpers_test.go  config_resolve.go  doc.go  embedded_backend.go  errors.go  errors_test.go  history_sanitize.go  history_sanitize_test.go  integration_local_vision_test.go  local_backend.go  local_backend_test.go  messages_building_test.go  model_fallback.go  model_fallback_test.go  model_round_loop.go  model_round_loop_test.go  model_selection.go  model_selection_test.go  nop_runtime.go  openai_compat_backend.go  openai_history.go  openai_stream_helpers.go  openai_stream_helpers_test.go  resolve.go  session_state.go  stream_adapters.go  stream_adapters_test.go  tool_backend.go  (+2 more)
internal/browser/: actions.go  browser_actions_test.go  browser_system_test.go  debug.go  manager.go  monitor.go  navigation.go  navigation_test.go  observe.go  output.go  refs.go  snapshot.go  state.go  types.go
runtime/: acp_reset_adapter.go  audit_dashboard_test.go  channels.go  config_integration_test.go  environment_test.go  interfaces.go  logger_test.go  pipeline.go  pipeline_context.go  pipeline_execute.go  pipeline_queue.go  pipeline_resolve.go  pipeline_test.go  pipeline_tools.go  pipeline_validate.go  process_tool_test.go  prompt_params.go  runtime_acp_control.go  runtime_acp_control_test.go  runtime_acp_spawn.go  runtime_acp_spawn_test.go  runtime_backend_test.go  runtime_builder.go  runtime_builder_test.go  runtime_chat.go  runtime_compaction.go  runtime_config.go  runtime_core.go  runtime_gateway.go  runtime_heartbeat.go  runtime_heartbeat_test.go  runtime_helpers.go  runtime_helpers_test.go  runtime_image.go  runtime_message.go  runtime_plugins.go  runtime_prompt_test.go  runtime_run.go  runtime_run_test.go  runtime_services.go  (+9 more)
scripts/: build-desktop.sh  build.ps1  build.sh  bundle-browser.sh  sign-and-release.sh  sync-website-downloads.sh
utils/: coerceutil.go  fileuri.go  fileuri_test.go  maputil.go  ptrutil.go  strutil.go
web/: README.md  metadata.json  next.config.ts  package-lock.json  package.json  vitest.config.ts
(+599 files in other folders)
